<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <EditText
        android:id="@+id/input_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_text_long"
        android:drawableTint="@color/black"
        android:hint="Sujet"
        android:inputType="textAutoCorrect"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_selectedParticipant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="@color/violet"
        android:drawableStart="@drawable/ic_account_circle"
        android:drawablePadding="10dp"
        android:drawableTint="@color/white"
        android:hint="Participants"
        android:inputType="numberDecimal"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_subject"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txt_participant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_selectedParticipant" />

    <TextView
        android:id="@+id/txt_room_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:layout_marginRight="15dp"
        android:text="Choisir une salle"
        android:textColor="@color/greyDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_participant"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_map_marker"
        android:drawableTint="@color/greyDark"
        android:hint="Salle"
        android:inputType="textAutoCorrect"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_room_title"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/input_time_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_clock_time_five_outline"
        android:backgroundTint="@color/violet"
        android:hint="Heure"
        android:inputType="time"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_room"
        app:layout_constraintEnd_toEndOf="parent"
        android:timePickerMode="spinner" />

    <Button
        android:id="@+id/input_date_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:drawablePadding="10dp"
        android:backgroundTint="@color/violet"
        android:hint="Date"
        android:inputType="time"
        android:padding="15dp"
        android:drawableStart="@drawable/calendar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_time_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/green"
        android:src="@drawable/valider"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@null" />

</androidx.constraintlayout.widget.ConstraintLayout>










