<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/menu_filter">

        <item android:id="@+id/trier_date"
            app:showAsAction="never"
            android:title="@string/date_filter" />

        <item android:id="@+id/trier_rooms"
            app:showAsAction="never"
            android:title="@string/room_filter" />

        <item android:id="@+id/without_filter"
            app:showAsAction="never"
            android:title="@string/no_filter" />
    </group>

</menu>