<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/input_filter_date_start"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:hint="Du :"
        app:boxBackgroundColor="#ECECF1"
        android:layout_marginTop="150dp"
        android:inputType="time"
        android:backgroundTint="@color/violet" />

    <Button
        android:id="@+id/input_filter_date_end"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:hint="Au :"
        app:boxBackgroundColor="#ECECF1"
        android:layout_marginTop="50dp"
        android:inputType="time"
        android:backgroundTint="@color/violet" />

</LinearLayout>